@@ -1,5 +1,6 @@
 2015-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* view.py, window.py: Fixed minor bugs.
 	* view.py (FeedWebViewScroll.pause): Added new gsetting key of
 	  auto-scroll-delay.
 	* plugins/base/getauthtoken.py (Authorization): Fixed a SSL error
